# DaMa

./: .gitignore  README.md  app.py  dama.json  dama.py  generate_small_input.py  other.json  profile.txt  pyproject.toml  test.json
providers/: board.py
providers/board/: def.py
providers/board2/: def.py
providers/example/: def.py
