[tool.poetry]
name = "datamake"
version = "0.1.0"
description = ""
authors = ["Reed Krawiec <reedkrawiec@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Pillow = "^9.0.1"
fenToBoardImage = "^0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "testpypisimple"
url = "https://test.pypi.org/simple/"